[package]
name = "ordo_derive"
version = "0.1.0"
authors = ["Kacper Urbaniec <at.kacper.urbaniec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.33", features = ["extra-traits"] }
quote = "1.0.7"
serde_json = "1.0.56"
proc-macro2 = "1.0.18"
lazy_static = "1.4.0"